--- a/index.html
+++ b/index.html
@@ -1254,22 +1254,16 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
                         <div class="footer-widget" data-aos="fade-up">
-                            <h4>لینک های مفید</h4>
+                            <h4>صفحات محبوب</h4>
                             <ul class="footer-links">
                                 <li>
-                                    <a href="shop.html" target="_self" title="لینک">همه دسته بندی ها</a>
+                                    <a href="shop.html" target="_self" title="لینک">صفحه اصلی</a>
                                 </li>
                                 <li>
-                                    <a href="menu.html" target="_self" title="لینک">منوی غذا</a>
+                                    <a href="menu.html" target="_self" title="لینک">درباره ما</a>
                                 </li>
                                 <li>
-                                    <a href="contact.html" target="_self" title="لینک">حساب من</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html" target="_self" title="لینک">سیاست حفظ حریم خصوصی</a>
-                                </li>
-                                <li>
-                                    <a href="about.html" target="_self" title="لینک">درباره ما</a>
+                                    <a href="contact.html" target="_self" title="لینک">محصولات ما</a>
                                 </li>
                             </ul>
                         </div>
