--- a/index.html
+++ b/index.html
@@ -1247,8 +1247,7 @@
                             <div class="social-link">
                                 <a href="https://www.instagram.com/" target="_blank" title="لینک"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.dribbble.com/" target="_blank" title="لینک"><i class="fab fa-dribbble"></i></a>
-                                <a href="https://www.twitter.com/" target="_blank" title="لینک"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.youtube.com/" target="_blank" title="لینک"><i class="fab fa-youtube"></i></a>
+                                
                             </div>
                         </div>
                     </div>
@@ -1299,18 +1298,18 @@
             <div class="newsletter radius-md">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-5 col-md-6">
-                        <h4 class="mb-15">مشترک خبرنامه ما شوید</h4>
+                        <h4 class="mb-15">ایمیل خود را وارد کنید</h4>
                     </div>
                     <div class="col-xl-5 col-md-6">
                         <div class="newsletter-form mb-15">
                             <form id="newsletterForm">
                                 <div class="form-group">
-                                    <input class="form-control shadow-md radius-sm" placeholder="جستجو کنید..." type="text" name="EMAIL" required="" autocomplete="off">
+                                    <input class="form-control shadow-md radius-sm" placeholder="ایمیل ..." type="text" name="EMAIL" required="" autocomplete="off">
                                     <button class="btn btn-lg btn-primary radius-sm" type="submit">
                                         <span class="d-inline d-sm-none">
                                             <i class="fal fa-paper-plane"></i>
                                         </span>
-                                        <span class="d-none d-sm-inline">اشتراک در</span>
+                                        <span class="d-none d-sm-inline">تایید کنید</span>
                                     </button>
                                 </div>
                             </form>
