--- a/index.html
+++ b/index.html
@@ -259,17 +259,6 @@
                                 <div class="card text-center">
                                     <div class="card-image mb-10 mx-auto">
                                         <a href="shop.html" target="_self" title="لینک" class="lazy-container ratio ratio-2-3 bg-none">
-                                            <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-2.png" alt="Image">
-                                        </a>
-                                    </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="میوه های ناب">میوه های ناب</a></h4>
-                                    <span class="font-lg">بیش از 70 مورد</span>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card text-center">
-                                    <div class="card-image mb-10 mx-auto">
-                                        <a href="shop.html" target="_self" title="لینک" class="lazy-container ratio ratio-2-3 bg-none">
                                             <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-3.png" alt="Image">
                                         </a>
                                     </div>
@@ -936,7 +925,7 @@
             <div class="section-title row mb-50 justify-content-between align-items-center" data-aos="fade-up">
                 <div class="col-lg-6">
                     <h2 class="title">
-                        آنچه مشتری ما در مورد خواربار فروشی ما می گوید
+                        آنچه مشتریان ما درباره ما می گویند 
                     </h2>
                 </div>
                 <div class="col-lg-4">
