--- a/index.html
+++ b/index.html
@@ -182,17 +182,6 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="item">
-                                <a href="login.html" class="btn-icon" target="_self" aria-label="User" title="کاربر">
-                                    <i class="fal fa-user-circle"></i>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="cart.html" class="btn-icon pe-2" target="_self" aria-label="Cart" title="سبد خرید">
-                                    <i class="fal fa-shopping-bag"></i>
-                                    <span class="badge rounded-pill bg-primary">3</span>
-                                </a>
-                            </div>
                         </div>
                     </nav>
                 </div>
@@ -215,8 +204,8 @@
                                 ما اقلام مواد غذایی را برای سلامتی ارائه می دهیم
                             </p>
                             <div class="cta-btn mt-40 btn-groups" data-aos="fade-up" data-aos-delay="250">
-                                <a href="shop.html" class="btn btn-lg btn-primary" title="سفارش خود را انجام دهید" target="_self">سفارش خود را انجام دهید</a>
-                                <a href="contact.html" class="btn btn-lg btn-outline bg-white border-0" title="چگونه کار می کند" target="_self">چگونه کار می کند</a>
+                                <a href="shop.html" class="btn btn-lg btn-primary" title="سفارش خود را انجام دهید" target="_self">چگونه سفارش ثبت کنم؟</a>
+                                
                             </div>
                         </div>
                     </div>
