--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
                 </div>
                 <div class="col-12" data-aos="fade-up">
-                    <div class="swiper category-slider" id="category-slider-5" data-slides-per-view="6" data-swiper-loop="false">
+                    <div class="swiper category-slider" id="category-slider-5" data-slides-per-view="5" data-swiper-loop="false">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="card text-center">
@@ -240,8 +240,8 @@
                                             <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-1.png" alt="Image">
                                         </a>
                                     </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="اقلام قهوه">اقلام قهوه</a></h4>
-                                    <span class="font-lg">86+ مورد</span>
+                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="اقلام قهوه">حبوبات</a></h4>
+                                    <span class="font-lg">5+ مورد</span>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -251,8 +251,8 @@
                                             <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-3.png" alt="Image">
                                         </a>
                                     </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن ارگانیک">روغن ارگانیک</a></h4>
-                                    <span class="font-lg">97+ مورد</span>
+                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن ارگانیک">ادویه جات</a></h4>
+                                    <span class="font-lg">5+ مورد</span>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -262,8 +262,8 @@
                                             <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-4.png" alt="Image">
                                         </a>
                                     </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن پخت و پز">روغن پخت و پز</a></h4>
-                                    <span class="font-lg">بیش از 35 مورد</span>
+                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن پخت و پز">پودر کیک</a></h4>
+                                    <span class="font-lg">5+ مورد</span>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -273,8 +273,8 @@
                                             <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-5.png" alt="Image">
                                         </a>
                                     </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="ادویه های داغ">ادویه های داغ</a></h4>
-                                    <span class="font-lg">75+ مورد</span>
+                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="ادویه های داغ"> دمنوش</a></h4>
+                                    <span class="font-lg">5+ مورد</span>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -284,21 +284,11 @@
                                             <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-6.png" alt="Image">
                                         </a>
                                     </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن ارگانیک">روغن ارگانیک</a></h4>
-                                    <span class="font-lg">46+ مورد</span>
+                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن ارگانیک">زعفران</a></h4>
+                                    <span class="font-lg">5+ مورد</span>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
-                                <div class="card text-center">
-                                    <div class="card-image mb-10 mx-auto">
-                                        <a href="shop.html" target="_self" title="لینک" class="lazy-container ratio ratio-2-3 bg-none">
-                                            <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/shop/cat-4.png" alt="Image">
-                                        </a>
-                                    </div>
-                                    <h4 class="card-title lc-1 mb-1"><a href="shop.html" target="_self" title="روغن پخت و پز">روغن پخت و پز</a></h4>
-                                    <span class="font-lg">بیش از 35 مورد</span>
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="swiper-pagination position-static mt-40" id="category-slider-5-pagination"></div>
                     </div>
